--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-native-scripts": "1.2.1",
     "jest-expo": "~20.0.0",
+    "react-native-scripts": "1.2.1",
     "react-test-renderer": "16.0.0-alpha.12"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -20,7 +20,13 @@
   },
   "dependencies": {
     "expo": "^20.0.0",
+    "history": "^4.7.2",
+    "immutable": "^3.8.1",
     "react": "16.0.0-alpha.12",
-    "react-native": "^0.47.0"
+    "react-native": "^0.47.0",
+    "react-redux": "^5.0.6",
+    "react-router": "^4.1.2",
+    "react-router-redux": "next",
+    "redux": "^3.7.2"
   }
 }
