--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native": "^0.47.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.1.2",
+    "react-router-native": "^4.1.1",
     "react-router-redux": "next",
     "redux": "^3.7.2"
   }
