--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "history": "^4.7.2",
     "immutable": "^3.8.1",
     "react": "16.0.0-alpha.12",
-    "react-native": "^0.47.0",
+    "react-native": "0.48-RC",
     "react-redux": "^5.0.6",
     "react-router": "^4.1.2",
     "react-router-native": "^4.1.1",
-    "react-router-redux": "next",
+    "react-router-redux": "5",
     "redux": "^3.7.2"
   }
 }
