--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "immutable": "^3.8.1",
     "react": "16.0.0-alpha.12",
     "react-native": "0.48-RC",
+    "react-native-side-menu": "^1.0.2",
     "react-redux": "^5.0.6",
     "react-router": "^4.1.2",
     "react-router-native": "^4.1.1",
