--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "immutable": "^3.8.1",
     "react": "16.0.0-alpha.12",
     "react-native": "0.48-RC",
+    "react-native-elements": "^0.16.0",
     "react-native-side-menu": "^1.0.2",
+    "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.6",
     "react-router": "^4.1.2",
     "react-router-native": "^4.1.1",
