--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native": "0.48-RC",
     "react-native-elements": "^0.16.0",
     "react-native-side-menu": "^1.0.2",
+    "react-native-sound": "^0.10.4",
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.6",
     "react-router-native": "^4.1.1",
