--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "jest-expo": "~20.0.0",
-    "react-native-scripts": "1.2.1",
-    "react-test-renderer": "16.0.0-alpha.12"
+    "jest-expo": "~24.0.0",
+    "react-native-scripts": "1.8.1",
+    "react-test-renderer": "16.2.0"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
@@ -19,11 +19,11 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "expo": "^20.0.0",
+    "expo": "^23.0.6",
     "history": "^4.7.2",
     "immutable": "^3.8.1",
-    "react": "16.0.0-alpha.12",
-    "react-native": "0.48-RC",
+    "react": "^16.0.0",
+    "react-native": "^0.50.4",
     "react-native-elements": "^0.16.0",
     "react-native-side-menu": "^1.0.2",
     "react-native-sound": "^0.10.4",
