--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "expo": "^23.0.6",
     "history": "^4.7.2",
     "immutable": "^3.8.1",
+    "native-base": "^2.3.5",
     "react": "^16.0.0",
     "react-native": "^0.50.4",
     "react-native-elements": "^0.16.0",
     "react-native-side-menu": "^1.0.2",
     "react-native-sound": "^0.10.4",
-    "react-navigation": "^1.0.0-beta.11",
+    "react-navigation": "^1.0.0-beta.22",
     "react-redux": "^5.0.6",
     "react-router-native": "^4.1.1",
     "redux": "^3.7.2"
