--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   "scripts": {
     "dev": "parcel index.html",
     "build": "parcel build index.html",
-    "lint": "eslint src/"
+    "lint": "eslint src/**/*.js --cache"
   },
   "dependencies": {
     "firebase": "4.12.1",
     "normalize.css": "8.0.0",
-    "react": "^0.13.0 || ^0.14.0 || ^15.0.0 || ^16.0.0",
+    "react": "16.3.1",
     "react-dom": "16.3.1"
   },
   "devDependencies": {
@@ -28,6 +28,12 @@
     "eslint": "4.19.1",
     "eslint-config-standard": "11.0.0",
     "eslint-config-standard-react": "6.0.0",
-    "parcel-bundler": "1.7.0"
+    "eslint-plugin-import": "2.11.0",
+    "eslint-plugin-node": "6.0.1",
+    "eslint-plugin-promise": "3.7.0",
+    "eslint-plugin-react": "7.7.0",
+    "eslint-plugin-standard": "3.0.1",
+    "parcel-bundler": "1.7.0",
+    "styled-components": "3.2.6"
   }
 }
