--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "firebase": "4.13.0",
+    "mobx": "^4.2.0",
+    "mobx-react": "^5.0.0",
     "normalize.css": "8.0.0",
     "react": "16.3.2",
     "react-dom": "16.3.2"
