--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "scripts": {
     "dev": "parcel index.html",
     "build": "parcel build index.html",
-    "lint": "eslint src/**/*.js --cache"
+    "lint": "yarn lint:js && yarn lint:css",
+    "lint:js": "eslint src/**/*.js --cache",
+    "lint:css": "stylelint './src/**/*.js'"
   },
   "dependencies": {
     "firebase": "4.13.0",
@@ -36,6 +38,10 @@
     "eslint-plugin-react": "7.7.0",
     "eslint-plugin-standard": "3.0.1",
     "parcel-bundler": "1.7.1",
-    "styled-components": "3.2.6"
+    "styled-components": "3.2.6",
+    "stylelint": "9.2.0",
+    "stylelint-config-recommended": "2.1.0",
+    "stylelint-config-styled-components": "0.1.1",
+    "stylelint-processor-styled-components": "1.3.1"
   }
 }
